force-app/main/default/objects/OrderItem/fields/Centro_expedici_n__c.field-meta.xml
<CustomField>
    <fullName>Centro_expedici_n__c</fullName>
    <label>Centro expedición</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tiendas (listado)</fullName>
            </value>
            <value>
                <fullName>cd01</fullName>
            </value>
            <value>
                <fullName>cd02</fullName>
            </value>
            <value>
                <fullName>cd03</fullName>
            </value>
            <value>
                <fullName>cd04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>