force-app/main/default/objects/OrderItem/fields/Codigo_Abacus__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Abacus__c</fullName>
    <label>Codigo Abacus</label>
    <length>250</length>
    <type>Text</type>
</CustomField>