force-app/main/default/objects/OrderItem/fields/Fecha_de_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_rechazo__c</fullName>
    <label>Fecha de rechazo</label>
    <type>Date</type>
</CustomField>