force-app/main/default/objects/OrderItem/fields/Importe_de_linia_iva__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_linia_iva__c</fullName>
    <label>Importe de linia (iva)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>