force-app/main/default/objects/OrderItem/fields/Importe_de_linia_s_i__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_linia_s_i__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Importe de linia (s/i)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>