force-app/main/default/objects/OrderItem/fields/N_mero__c.field-meta.xml
<CustomField>
    <fullName>N_mero__c</fullName>
    <label>Número de linia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>