force-app/main/default/objects/OrderItem/fields/Precio_PVP_con_iva__c.field-meta.xml
<CustomField>
    <fullName>Precio_PVP_con_iva__c</fullName>
    <label>Precio PVP (con iva)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>