force-app/main/default/objects/OrderItem/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <label>Unidades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>